@@ -1,8 +1,15 @@
 2000-11-01  Havoc Pennington  <hp@redhat.com>
 
+	* gtk/testgtk.c (create_labels): Test set_markup_with_accel()
+
+	* gtk/gtklabel.c (set_markup): Convert the unichar to a GDK keyval
+	before returning it. 
+	
+2000-11-01  Havoc Pennington  <hp@redhat.com>
+
 	* gdk/gdkpixbuf-render.c (gdk_pixbuf_render_to_drawable_alpha):
 	Clip the rectangle to be rendered to the drawable, since
-	get_from_drawable() requires a region within the drawable	
+	get_from_drawable() requires a region within the drawable
 
 2000-11-01  Havoc Pennington  <hp@redhat.com>
 
